[package]
name = "wellknown"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { path = "../../tonic" }
prost = { git = "https://github.com/m10io/prost.git", branch = "any-support" }
prost-types = { git = "https://github.com/m10io/prost.git", branch = "any-support" }

[build-dependencies]
tonic-build = { path = "../../tonic-build" }
