[package]
name = "uuid1"
version = "0.1.0"
authors = ["Danny Hua <danny@42layers.io>"]
edition = "2018"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { git = "https://github.com/m10io/prost.git", branch = "any-support" }
bytes = "0.5"
[build-dependencies]
prost-build = { git = "https://github.com/m10io/prost.git", branch = "any-support" }
